--- a/raymarching_hybrid_live.html
+++ b/raymarching_hybrid_live.html
@@ -629,7 +629,7 @@ void main(void) {
 
 				//
 
-				renderer = new THREE.WebGLRenderer();
+				renderer = new THREE.WebGLRenderer( { antialias: true } );
 				//renderer.setPixelRatio( window.devicePixelRatio );
 				renderer.setSize( config.resolution, config.resolution );
 				renderer.setClearColor( new THREE.Color( 0xffffff ) );
@@ -795,7 +795,7 @@ void main(void) {
 				camera.aspect = canvas.width / canvas.height;
 				camera.updateProjectionMatrix();
 
-				renderer.setSize( canvas.width, canvas.height );
+				helper.setSize( canvas.width, canvas.height );
 
 			}
 
@@ -848,7 +848,6 @@ void main(void) {
 
 				} else {
 
-					renderer.clear();
 					renderer.render( scene, camera );
 
 				}
