--- a/pathtracing_test.html
+++ b/pathtracing_test.html
@@ -224,7 +224,8 @@ void main(void) {
 			var camera, renderer;
 			var orbitControls, prevOrbitControlsState = -1;
 			var renderQuad;
-			var floatQuad, initBuffer, readBuffer, writeBuffer, frame = 0;
+			var floatQuad, initTexture, readBuffer, writeBuffer;
+			var frame = 0;
 			var clock = new THREE.Clock();
 
 			var config = {
@@ -297,7 +298,7 @@ void main(void) {
 
 			function init() {
 
-				initBuffer  = createDataTexture(  config.resolution, config.resolution );
+				initTexture  = createDataTexture(  config.resolution, config.resolution );
 				readBuffer  = createRenderTarget( config.resolution, config.resolution );
 				writeBuffer = readBuffer.clone();
 
@@ -437,7 +438,7 @@ void main(void) {
 					floatQuad.material.uniforms.resolution.value = new THREE.Vector2( canvas.width, canvas.height );
 					floatQuad.material.uniforms.time.value = timestamp * 0.001;
 					floatQuad.material.uniforms.frame.value = frame;
-					floatQuad.material.uniforms.buffer.value = frame === 0 ? initBuffer : readBuffer.texture;
+					floatQuad.material.uniforms.buffer.value = frame === 0 ? initTexture : readBuffer.texture;
 
 					// set camera uniforms
 					{
@@ -477,35 +478,6 @@ void main(void) {
 				frame++;
 
 			}
-
-			// easy mobile device detection
-			function isMobileDevice () {
-
-				if ( navigator === undefined || navigator.userAgent === undefined ) {
-
-					return true;
-
-				}
-
-				var s = navigator.userAgent;
-
-				if (    s.match( /iPhone/i )
-//				     || s.match( /iPad/i )
-				     || s.match( /iPod/i )
-				     || s.match( /webOS/i )
-				     || s.match( /BlackBerry/i )
-				     || ( s.match( /Windows/i ) && s.match( /Phone/i ) )
-				     || ( s.match( /Android/i ) && s.match( /Mobile/i ) ) ) {
-
-					return true;
-
-				}
-
-				return false;
-
-			}
-
 		</script>
-
 	</body>
 </html>
