--- a/pathtracing_test.html
+++ b/pathtracing_test.html
@@ -37,10 +37,8 @@
 
 	<body>
 		<div id="info">
-		<a href="http://threejs.org" target="_blank">three.js</a> - webgl pathtracing example<br />
-		Copyright
-		<a href="http://www.geocities.jp/higuchuu4/index_e.htm" target="_blank">Model Data</a>
-		<a href="http://www.nicovideo.jp/watch/sm13147122" target="_blank">Dance Data</a>
+			<a href="http://threejs.org" target="_blank">three.js</a> - webgl pathtracing example<br />
+			by <a href="https://github.com/gam0022" target="_blank">gam0022</a> (<a href="http://qiita.com/gam0022/items/9875480d33e03fe2113c" target="_blank">article in Japanese</a>)
 		</div>
 
 <script id="vertex_shader" type="x-shader/x-vertex">
@@ -76,11 +74,15 @@ const float OFFSET = EPS * 10.0;
 const float PI = 3.14159265359;
 const vec3 backgroundColor = vec3( 1.0 );
 
+struct Ray {
+	vec3 origin;
+	vec3 direction;
+};
+
 struct Material {
 	int type;
 	vec3 color;
 };
-
 #define MATERIAL_TYPE_DIFFUSE 0
 
 struct Intersection {
@@ -89,11 +91,6 @@ struct Intersection {
 	float distance;
 	vec3 normal;
 	Material material;
-};
-
-struct Ray {
-	vec3 origin;
-	vec3 direction;
 };
 
 struct Sphere {
@@ -135,8 +132,14 @@ float sdSphere( vec3 p, float r ) {
 	return length( p ) - r;
 }
 
+float sdTorus( vec3 p, vec2 t ) {
+	vec2 q = vec2( length( p.xz ) - t.x, p.y );
+	return length( q ) - t.y;
+}
+
 float sceneDistance( vec3 p ) {
-	return sdSphere( p, 1.0 );
+	return sdTorus( p - vec3( 3.0, 0.2, 0.0 ), vec2( 1.0, 0.2 ) );
+	// return sdSphere( p, 1.0 );
 	//return min( udFloor( p ), sdSphere( p, 1.0 ) );
 }
 
@@ -147,7 +150,7 @@ vec3 calcNormal( vec3 p ) {
 			e.yxy * sceneDistance( p + e.yxy ) + e.xxx * sceneDistance( p + e.xxx ) );
 }
 
-void intersectDistanceFucntion( inout Intersection intersection, inout Ray ray, Material material ) {
+void intersectDistanceFucntion( inout Intersection intersection, Ray ray, Material material ) {
 	float d;
 	float distance = 0.0;
 	vec3 p = ray.origin;
@@ -164,13 +167,13 @@ void intersectDistanceFucntion( inout Intersection intersection, inout Ray ray, 
 			intersection.hit = true;
 			intersection.position = p;
 			intersection.normal = calcNormal( p );
-			intersection.distance = d;
+			intersection.distance = distance;
 			intersection.material = material;
 		}
 	}
 }
 
-void intersectPlane( inout Intersection intersection, inout Ray ray, inout Plane plane ){
+void intersectPlane( inout Intersection intersection, Ray ray, Plane plane ){
     float d = -dot( plane.position, plane.normal );
     float v = dot( ray.direction, plane.normal );
     float t = -( dot( ray.origin, plane.normal ) + d ) / v;
@@ -184,19 +187,41 @@ void intersectPlane( inout Intersection intersection, inout Ray ray, inout Plane
 	}
 }
 
-void intersectScene( inout Intersection intersection, inout Ray ray ) {
+void intersectSphere( inout Intersection intersection, Ray ray, Sphere sphere ){
+	vec3  a = ray.origin - sphere.position;
+	float b = dot( a, ray.direction );
+	float c = dot( a, a ) - sphere.radius * sphere.radius;
+	float d = b * b - c;
+	float t = -b - sqrt( d );
 
+	if( d > 0.0 && t > EPS && t < intersection.distance ) {
+		intersection.hit = true;
+		intersection.position = ray.origin + ray.direction * t;
+		intersection.normal = normalize( intersection.position - sphere.position );
+		intersection.distance = t;
+		intersection.material = sphere.material;
+	}
+}
+
+void intersectScene( inout Intersection intersection, inout Ray ray ) {
 	Plane plane;
 	plane.material.type = MATERIAL_TYPE_DIFFUSE;
 	plane.material.color = vec3( 0.5 );
-	plane.position = vec3( 0.0, -1.0, 0.0 );
+	plane.position = vec3( 0.0, 0.0, 0.0 );
 	plane.normal = vec3( 0.0, 1.0, 0.0 );
 	intersectPlane( intersection, ray, plane );
 
 	Material distanceMaterial;
 	distanceMaterial.type = MATERIAL_TYPE_DIFFUSE;
-	distanceMaterial.color = vec3( 0.8, 0.4, 0.4 );
+	distanceMaterial.color = vec3( 0.4, 0.4, 0.8 );
 	intersectDistanceFucntion( intersection, ray, distanceMaterial );
+
+	Sphere sphere;
+	sphere.material.type = MATERIAL_TYPE_DIFFUSE;
+	sphere.material.color = vec3( 0.8, 0.4, 0.4 );
+	sphere.position = vec3( 0.0, 1.0, 1.0 );
+	sphere.radius = 1.0;
+	intersectSphere( intersection, ray, sphere );
 }
 
 //
